New formatting, added examples and main information layout.

--- a/index.html
+++ b/index.html
@@ -5,38 +5,42 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header>
-        <title> Portfolio</title>
+    <!-- div contentWrap added to center everything and keep things fixed in place.-->
+    <div class="contentWrap">
+        <header>
+   <title> Portfolio</title>
         ASHLEY YOUNG PORTFOLIO
     </header>
- 
-
   <div class="mainDescriptor">
     <h1> The Developer</h1>
 
-<img class="developer">
+<img class="developer" src="./assets/images/Snapchat-758353330.jpg" alt="A picture of the developer.">
     <div class="divIntroduction"><h2>Hello!</h2>
-    <p class="mainIntroduction"> My name's Ashley Young. I'm a 25 year old web developer who is currently working through a certificate degree with the UCF Bootcamp Program. You can find a selection of the work I've done so far here. 
-    <br><br>
-For questions and work inquiries, I can best be contacted under the following:<br>
-(email icon here) ashmeyo74@gmail.com
-(phone icon here) (xxx)-xxx-xxxx</p></div>
+    <p> My name's Ashley Young. I'm a 25 year old web developer who is currently working through a certificate degree with the UCF Bootcamp Program. I'm based in The Dalles, Oregon and my interests include video games, art design and coding. You can find a selection of the work I've done so far here. <br> <br>
+    
+    If you'd like to reach out for personal or business inquiries, you can find my contact email in the footer below.</p>
+    <br></div>
   </div>
 
 <div class="examplesHeader">
 <h3> Examples of My Work </h3>
 </div>
 
+  <!-- 'examplesDivWrap' centers  the portfolio circles-->
 <div class="portfolioExamples">
-  <img src=+>one</div>
+  <a href="https://ashmeyo74.github.io/horiseon-repo-edit/"><img class="portfolioImage" src="/assets/images/horiseon.png"  alt="A screenshot of a website edit. Clicking on this leads to a webpage." ></a></div>
+ 
+  <div class="portfolioExamples">
+    <a href="https://www.youtube.com/watch?v=2GgiZZhO-PA"><img class="portfolioImage" src="/assets/images/cat-breakdancing.gif"  alt="A .GIF format of a cat dancing. Clicking on this leads to a YouTube webpage." ></a></div>
+
+  <div class="portfolioExamples">
+    <a href="/assets/images/20220210_190452.jpg"><img class="portfolioImage" src="/assets/images/20220210_190452.jpg"  alt="A picture of a very good boy. Clicking on this leads to a bigger upload of the image." ></a></div>
+
 <div class="portfolioExamples">
-  two</div>
-<div class="portfolioExamples">
-  three</div>
-<div class="portfolioExamples">
-  four</div>
+  <a href="https://www.w3schools.com/"><img class="portfolioImage" src="/assets/images/w3schools.png"  alt="A screenshot of a very helpful coding website (w3schools). Clicking on this leads to a webpage." ></a></div>
   
-  <footer> test </footer>
+  <footer> test </footer></div>
 </body>
+
 
 </html>
