Fixed links and images.

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
   <div class="examplesDivWrap">
 
 <div class="portfolioExamples">
-  <a href="https://ashmeyo74.github.io/horiseon-repo-edit/"><img class="portfolioImage" src="/assets/images/horiseon.png"  alt="A screenshot of a website edit. Clicking on this leads to a webpage." ></a></div>
+  <a href="https://ashmeyo74.github.io/horiseon-repo-edit/"><img class="portfolioImage" src="https://i.imgur.com/b6up4Ia.png"  alt="A screenshot of a website edit. Clicking on this leads to a webpage." ></a></div>
  
   <div class="portfolioExamples">
-    <a href="https://www.youtube.com/watch?v=2GgiZZhO-PA"><img class="portfolioImage" src="/assets/images/cat-breakdancing.gif"  alt="A .GIF format of a cat dancing. Clicking on this leads to a YouTube webpage." ></a></div>
+    <a href="https://www.youtube.com/watch?v=2GgiZZhO-PA"><img class="portfolioImage" src="https://i.imgur.com/SSY0sOR.gif"  alt="A .GIF format of a cat dancing. Clicking on this leads to a YouTube webpage." ></a></div>
 
   <div class="portfolioExamples">
-    <a href="/assets/images/20220210_190452.jpg"><img class="portfolioImage" src="/assets/images/20220210_190452.jpg"  alt="A picture of a very good boy. Clicking on this leads to a bigger upload of the image." ></a></div>
+    <a href="https://i.imgur.com/KuKRkNX.jpeg"><img class="portfolioImage" src="https://i.imgur.com/KuKRkNX.jpeg"  alt="A picture of a very good boy. Clicking on this leads to a bigger upload of the image." ></a></div>
 
 <div class="portfolioExamples">
-  <a href="https://www.w3schools.com/"><img class="portfolioImage" src="/assets/images/w3schools.png"  alt="A screenshot of a very helpful coding website (w3schools). Clicking on this leads to a webpage." ></a></div></div>
+  <a href="https://www.w3schools.com/"><img class="portfolioImage" src="https://i.imgur.com/qrVm9ZG.png"  alt="A screenshot of a very helpful coding website (w3schools). Clicking on this leads to a webpage." ></a></div></div>
   
   <footer> 
     <div id="contactText" class="contactText">CONTACT</div>
